--- a/settings.gradle
+++ b/settings.gradle
@@ -19,6 +19,7 @@ buildscript {
     }
     dependencies {
         var nav_version = "2.7.7"
+        classpath ("com.android.tools.build:gradle:8.3.2")
         classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version")
     }
 }
